# doom-arena

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_deathmatch_fs4.py
benchmarks/: latent_loader_benchmark.py  loader_benchmark.py  report.html
datasets/eval_clips_v2/: .gitignore  index.json
datasets/eval_clips_v2/attack_firing/: af_chainsaw_027.json  af_pistol_000.json  af_pistol_007.json  af_pistol_008.json  af_pistol_010.json  af_pistol_012.json  af_pistol_013.json  af_pistol_014.json  af_pistol_016.json  af_pistol_017.json  af_pistol_018.json  af_pistol_019.json  af_pistol_020.json  af_pistol_021.json  af_pistol_023.json  af_pistol_024.json  af_pistol_028.json  af_shotgun_001.json  af_shotgun_003.json  af_shotgun_005.json  af_shotgun_006.json  af_shotgun_011.json  af_shotgun_015.json  af_super_shotgun_002.json  (+6 more)
docs/: architecture.md  commands.md  notes_for_chris.md  reproducing.md
doom_arena/: __init__.py  agent.py  download_models.py  evaluate.py  fast_loader.py  latent_loader.py  loader.py  log_wandb.py  monitor.py  play.py  record.py  record_human.py  run.py  sample_frames.py  train.py
doom_arena/web/: __init__.py  game_runner.py  input_mapping.py  recorder.py  server.py  session.py
preprocessing/: add_weapon_pickups.py  annotate_episodes.py  annotate_v2.py  browse_eval_clips.py  encode_dataset.py  explore_latents.py  explore_latents_wds.ipynb  extract_eval_clips.py  extract_eval_clips_v2.py  extract_eval_clips_v3.py  inspect_latents.py  inspect_pvp.py  sanity_check_actions.py  validate_ae.py  view_annotations.py
scripts/: diagnose_mp_bots.py
(+118 files in other folders)
